# vision-curator

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.agent/: MEMORY.md  TASK_BRIEF.md
configs/curator/: default.yaml
configs/release/: default.yaml
configs/review/: default.yaml
configs/trust/: default.yaml
docs/: EGOHUMANS_CALIBRATION_EXECUTIVE_SUMMARY.md  EGOHUMANS_EDGE_NODE_PROCESSING_PROPOSAL.md  EGOHUMANS_LEGO_WORKING_SPEC.md  EGOHUMANS_ORACLE_IMPORT_TASK_SPEC.md  EGOHUMANS_VISION_CURATOR_GOLDSET_PROPOSAL.md  METRICS_AND_DIAGNOSTICS.md  MODULE_MAP.md  PROJECT_STATE.md  PROPOSED_PLAN_v2.md  SYSTEM_DESIGN_v2.md  VISION_CURATOR_REPO_DESIGN.md  annotation_policy.md  architecture.md  dataset_releases.md  package_contracts.md  review_queues.md
docs/handoffs/: CURATOR_TO_TRAINER.md  EDGE_TO_CURATOR.md  WORKSPACE_NEXT_STEPS_20260430.md
schemas/: dataset_release.schema.json  phase2_manifest.schema.json  review_item.schema.json
src/vision_curator/: __init__.py  cli.py
src/vision_curator/annotation/: __init__.py  cvat_export.py  cvat_import.py  yolo_roundtrip.py
src/vision_curator/common/: __init__.py  config.py  env.py  manifests.py  models.py  paths.py
src/vision_curator/fiftyone/: __init__.py  views.py
src/vision_curator/oracle/: __init__.py  egohumans.py
src/vision_curator/releases/: __init__.py  build.py  egohumans.py  (+2 more)
tests/: test_cvat_exchange.py  test_dataset_release.py  test_egohumans_oracle.py  test_egohumans_release.py  test_env_requirements.py  test_ingest.py  test_review_queue.py  test_trust_scoring.py  test_validate_phase2.py
(+37 files in other folders)
