[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vision-curator"
version = "0.1.0"
description = "Desktop-side curation tools for thermal person detection datasets."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
vision-curator = "vision_curator.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
